<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CHATS</string>
    <string name="action_settings">Settings</string>
    <string name="chat">Dispatches</string>
    <string name="new_message">New Dispatch/Compose</string>
    <string name="select_All">Select All</string>
    <string name="deselect_All">Deselect All</string>
    <string name="ok">OK</string>
    <string name="hello_world">Hello world!</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="message">Message: </string>
    <string name="to">To: </string>
    <string name="discard">Discard</string>
    <string name="discardPrompt">Discard Message?</string>
    <string name="events">Events</string>
    <string name="send">Send</string>
    <string name="title_activity_new_message">Chats</string>
    <string name="title_activity_on_going_message">Chats</string>
    <string name="title_events">Events</string>
    <string name="christmas">Christmas</string>
    <string name="newyears">New Years</string>
    <string name="thanksgiving">Thanksgiving</string>
    <string name="stpattys">St. Patricks Day</string>
    <string name="custom">Custom</string>
    

</resources>