<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:columnCount="1"
    tools:context=".NewMessageActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="143dp"
            android:layout_height="76dp"
            android:contentDescription="@string/to"
            android:src="@drawable/textbubble" />

        <EditText
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:ems="15"
            android:hint="@string/to"
            android:inputType="text"
            android:textColor="#FFFFFF" >

            <requestFocus android:layout_width="match_parent" />

        </EditText>
    </TableRow>

    <EditText
       android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="3dip"
        android:layout_marginRight="2dip"
        android:gravity="bottom"
        android:hint="@string/message"
        android:paddingBottom="9dip"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/discard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:background="@drawable/round_button"
            android:onClick="discard"
            android:text="@string/discard"
            android:textColor="#000000" />

        <Button
            android:id="@+id/events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:background="@drawable/round_button"
            android:onClick="events"
            android:text="@string/events"
            android:textColor="#000000" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:onClick="sendMessage"
            android:text="@string/send"
            android:textColor="#000000" />

    </LinearLayout>

</TableLayout>