<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:columnCount="1"
    tools:context=".OnGoingMessageActivity" >

    <ListView
        android:id="@+id/onGoingList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" />

    <TableRow
        android:id="@+id/tableRow1OnG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TableRow>

    <EditText
        android:id="@+id/messageOnG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="3dip"
        android:layout_marginRight="2dip"
        android:layout_weight="0.06"
        android:gravity="bottom"
        android:hint="@string/message"
        android:paddingBottom="9dip"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/discardOnG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:gravity="top"
            android:onClick="discard"
            android:text="@string/discard"
            android:textColor="#000000" />

        <Button
            android:id="@+id/eventsOnG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:gravity="top"
            android:onClick="events"
            android:text="@string/events"
            android:textColor="#000000" />

        <Button
            android:id="@+id/sendOnG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:gravity="top"
            android:onClick="sendMessage"
            android:text="@string/send"
            android:textColor="#000000" />
    </LinearLayout>

</TableLayout>